kubernetes/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: operator-webhook
  namespace: riasc-system
spec:
  selector:
    app: operator
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
