kubernetes/webhook.yaml
---
kind: MutatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1
metadata:
  name: operator-webhook
webhooks:
- name: project.operator.riasc-system.svc
  sideEffects: None
  admissionReviewVersions:
    - "v1"
  rules:
  - operations: ["*"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  failurePolicy: Ignore
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZpRENDQTNDZ0F3SUJBZ0lKQUwyb3RoSTB0eDI3TUEwR0NTcUdTSWIzRFFFQkN3VUFNRmt4Q3pBSkJnTlYKQkFZVEFrUkZNUXd3Q2dZRFZRUUlEQU5PVWxjeER6QU5CZ05WQkFjTUJrRmhZMmhsYmpFck1Da0dBMVVFQXd3aQphemh6TFc1bGRHVnRMWGRsWW1odmIyc3VjbWxoYzJNdGMzbHpkR1Z0TG5OMll6QWVGdzB5TWpBeE1qRXhNakE0Ck1qQmFGdzB6TWpBeE1Ua3hNakE0TWpCYU1Ga3hDekFKQmdOVkJBWVRBa1JGTVF3d0NnWURWUVFJREFOT1VsY3gKRHpBTkJnTlZCQWNNQmtGaFkyaGxiakVyTUNrR0ExVUVBd3dpYXpoekxXNWxkR1Z0TFhkbFltaHZiMnN1Y21saApjMk10YzNsemRHVn [...]
    service:
      namespace: riasc-system
      name: operator-webhook
      path: /validate_node_selector
      port: 443
